--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <section class="pmat"><h1>Parc Materiel</h1>
     </section>
     <section class="conteiner-01">
-        <a href="/page/vio1.html" class="link-a"><span class="col-01">Mini-pelle jusque 3 Tonnes 3 </span></a>
-        <a href="/page/vio2.html" class="link-a"><span class="col-01">Mini-pelle 3 a 6 Tonnes</span></a> 
-        <a href="/page/vio3.html" class="link-a"><span class="col-01">Mini-pelle 6 a 10 Tonnes</span></a>
+        <a href="/page/vio1.html" class="link-a"><span class="col-01">Pelle <= 3 T</span></a>
+        <a href="/page/vio2.html" class="link-a"><span class="col-01">Pelle 3 >= 6 T</span></a> 
+        <a href="/page/vio3.html" class="link-a"><span class="col-01">Pelle 6 >= 10 T</span></a>
     </section>  
     <section class="conteiner-01">
-        <a href="/page/vio4.html" class="link-a"><span class="col-01">Mini Chargeur  sur pneus</span></a>
-        <a href="/page/vio5.html" class="link-a"> <span class="col-01">Chargeur sur pneus</span></a>
+        <a href="/page/vio4.html" class="link-a"><span class="col-01">Ghell</span></a>
+        <a href="/page/vio5.html" class="link-a"> <span class="col-01">Chargeur</span></a>
         <a href="/page/vio6.html" class="link-a"><span class="col-01">Dumper</span></a>       
     </section>
     <section class="conteiner-01">
