--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <script src="/JS/index.js"defer></script>
+    <script src="public/dist/index.js"defer></script>
     <title>Parc Materiel</title>
 </head>
 <body>
@@ -13,13 +13,13 @@
     <section class="pmat"><h1>Parc Materiel</h1>
     </section>
     <section class="conteiner-01">
-        <a href="/page/vio1.html" class="link-a"><span class="col-01">Pelle <= 3 T</span></a>
-        <a href="/page/vio2.html" class="link-a"><span class="col-01">Pelle 3 >= 6 T</span></a> 
-        <a href="/page/vio3.html" class="link-a"><span class="col-01">Pelle 6 >= 10 T</span></a>
+        <a href="/page/vio1.html" class="link-a"><span class="col-01">Mini-pelle jusque 3 Tonnes 3 </span></a>
+        <a href="/page/vio2.html" class="link-a"><span class="col-01">Mini-pelle 3 a 6 Tonnes</span></a> 
+        <a href="/page/vio3.html" class="link-a"><span class="col-01">Mini-pelle 6 a 10 Tonnes</span></a>
     </section>  
     <section class="conteiner-01">
-        <a href="/page/vio4.html" class="link-a"><span class="col-01">Ghell</span></a>
-        <a href="/page/vio5.html" class="link-a"> <span class="col-01">Chargeur</span></a>
+        <a href="/page/vio4.html" class="link-a"><span class="col-01">Mini Chargeur  sur pneus</span></a>
+        <a href="/page/vio5.html" class="link-a"> <span class="col-01">Chargeur sur pneus</span></a>
         <a href="/page/vio6.html" class="link-a"><span class="col-01">Dumper</span></a>       
     </section>
     <section class="conteiner-01">
@@ -27,6 +27,7 @@
         <a href="/page/vio8.html" class="link-a"><span class="col-01">Groupe électrogène</span></a>
         <a href="/page/vio9.html" class="link-a"><span class="col-01">DIVERS</span></a>
     </section>
+    <section><p id="db">carregando</p></section>
 </div>
 </body>
 </html>
